--- a/camellia espresso/index.html
+++ b/camellia espresso/index.html
@@ -1,3 +1,6 @@
+<?php 
+	session_start();
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +16,14 @@
 
 </head>
 <body background="img/hikks.jpg">
+<?php 
+	$email = $_SESSION["email"]
+	if($email==!)
+	{
+		header("location:online.html")
+	}
+?>
+
     <header >
             
         <nav class="navbar" >
